--- a/abalone/src/App.css
+++ b/abalone/src/App.css
@@ -37,6 +37,14 @@
   z-index: 1;
   position: absolute;
   border-radius: 50%;
+  width: 70px;
+  height: 70px;
+}
+
+.small_circle {
+  z-index: 1;
+  position: absolute;
+  border-radius: 50%;
   width: 50px;
   height: 50px;
 }
