--- a/abalone/src/App.css
+++ b/abalone/src/App.css
@@ -19,6 +19,7 @@
 .hexboard {
   margin-left: 3px;
   margin-top: 10px;
+  position: relative;
 }
 
 .row {
@@ -75,6 +76,23 @@
   box-shadow: 0px 0px 10px rgb(48, 79, 216);
 }
 
+.timer1P {
+  position: absolute;
+  bottom: 0;
+  right: 5px;
+  font-size: 42px;
+  color: white;
+}
+
+.timer2P {
+  position: absolute;
+  top: 0;
+  right: 5px;
+  font-size: 42px;
+  color: black;
+}
+
+
 .small_circle {
   z-index: 1;
   position: absolute;
@@ -87,6 +105,7 @@
 .score_container {
   position: absolute;
   margin-top: -16px;
+  margin-left: -5px;
 }
 
 .side_by_side {
@@ -103,6 +122,8 @@
 
 .circle_number {
   font-size: 42px;
+  /*text-align: right;*/
+  /*min-width: 40px;*/
 }
 
 .title {
